--- a/src/polymer-web-app/polymer-web-app.html
+++ b/src/polymer-web-app/polymer-web-app.html
@@ -47,7 +47,7 @@
     </div>
     <div hidden$="[[!logged]]">
       <contact-compounent language=[[localSelected]] users=[[users]]></contact-compounent>
-      <paper-button on-tap="logout">Cerrar sesión</paper-button>
+      <paper-button on-tap="logout">{{localSelected.form.logout}}</paper-button>
     </div>
 
 
